# tree_magic.ex

./: .gitignore  LICENSE  README.md  mix.exs
.circleci/: config.yml
lib/: tree_magic.ex
native/tree_magic_nif/: Cargo.toml  README.md
native/tree_magic_nif/src/: lib.rs
test/: tree_magic_test.exs
test/fixtures/: .~lock.VeryImportant.odt#  VeryImportant.odt
