[package]
name = "tree_magic_nif"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "tree_magic_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
#rustler = "0.21.0"
rustler = "0.22.0-rc.1"
lazy_static = "1.0"
tree_magic = "0.2.1"
# dependency of tree_magic
petgraph = "^0.4"